# py-fsrs

./: .gitignore  ALGORITHM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/workflows/: autofix.yml  docs.yml  mypy.yml  python-publish.yml  ruff.yml  test.yml  type-check.yml
fsrs/: __init__.py  card.py  fsrs.py  optimizer.py  rating.py  review_log.py  scheduler.py  state.py
src/fsrs/: __init__.py  fsrs.py  fsrs_v5.py  models.py  optimizer.py  review_log.py  scheduler.py  scheduler_basic.py  scheduler_long_term.py
tests/: review_logs_josh_1711744352250_to_1728234780857.csv  test_basic.py  test_fsrs.py  test_optimizer.py
