[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsrs"
version = "6.1.1"
description = "Free Spaced Repetition Scheduler"
readme = "README.md"
authors = [
    { name = "Jarrett Ye", email = "jarrett.ye@outlook.com" },
    { name = "Joshua Hamilton", email = "hamiltonjoshuadavid@gmail.com" }
    ]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["spaced-repetition", "flashcard"]
dependencies = []
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/open-spaced-repetition/py-fsrs"

[project.optional-dependencies]
dev = ["pytest", "ruff", "setuptools", "torch", "numpy", "pandas", "uv", "pytest-xdist", "pdoc", "tqdm", "pytest-cov", "mypy"]
optimizer = ["torch", "numpy", "pandas", "tqdm"]

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = ["error"]

[tool.mypy]
files = ["fsrs"]
exclude = "build"

[[tool.mypy.overrides]]
module = ["fsrs.optimizer"]
ignore_errors = true
